fdo#74401 VML groupshape import: only handle v:rect as TextShape

Regression from commit 75934fc178ed90b56d77eb1efebed5bdac8427b6 (VML
import: handle shape with text inside groupshape as TextShape,
2014-01-17), the problem was that TextShape is also a kind of rectangle,
so that shouldn't be used for all shape with text in groupshapes, just
for v:rect elements.

This fix gives the required text wrapping for the referenced bugdoc
without turning the rest of the shapes into rectangles.

Change-Id: I6e343c65a869e335b641728adbc7984ee85377b5